--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -1,3 +1,36 @@
+body {
+  line-height: 1.7em !important;
+}
+
+// h1, h2, h3, h4, h5, h6 {
+//   padding: 1rem;
+//   font-weight: 800;
+//   font-family: "Montserrat", sans-serif;
+// }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 1rem;
+  margin-top: 0.5rem !important;
+  font-family: "Bungee", cursive;
+  clear: both;
+  display: block !important;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  padding: 1rem;
+  margin-bottom: 0rem !important;
+}
+
+.container-fluid a {
+  font-weight: 600;
+}
+
 // *********************
 // Theme Colors
 // *********************
@@ -105,13 +138,37 @@ $theme-colors: (
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #2a2a2a !important;
-    color: #ffe9c1d9 !important;
+    color: #fff !important;
+  }
+
+  .card {
+    color: #2a2a2a;
+    background-color: #f4fd5b !important;
+    border: 1px solid #f4fd5b !important;
+  }
+
+  .mainContent {
+    .row {
+      a {
+        color: #22e6bb !important;
+      }
+      a:hover,
+      a:active,
+      a:visited {
+        color: #f4fd5b !important;
+      }
+    }
   }
 }
 @media (prefers-color-scheme: light) {
   body {
-    background-color: #ffe9c1d9 !important;
+    background-color: #efefef !important;
     color: #151515 !important;
+  }
+
+  .card {
+    border: 1px solid #f4fd5b57 !important;
+    background-color: #f4fd5b57 !important;
   }
 }
 
@@ -123,3 +180,4 @@ $theme-colors: (
 @import "index.css";
 @import url("https://fonts.googleapis.com/css2?family=Bungee&family=Pacifico&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,800;1,400;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
