--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -32,12 +32,24 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-h1 {font-size: 4.1em !important;}
-h2 {font-size: 3.1em !important;}
-h3 {font-size: 2.2em !important;}
-h4 {font-size: 1.7em !important;}
-h5 {font-size: 1.2em !important;}
-h6 {font-size: 1.1em !important;}
+h1 {
+  font-size: 4.1em !important;
+}
+h2 {
+  font-size: 3.1em !important;
+}
+h3 {
+  font-size: 2.2em !important;
+}
+h4 {
+  font-size: 1.7em !important;
+}
+h5 {
+  font-size: 1.2em !important;
+}
+h6 {
+  font-size: 1.1em !important;
+}
 h1,
 h2,
 h3,
@@ -58,7 +70,7 @@ p {
   line-height: 1.5em;
 }
 code {
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
 }
 
 // make links inside a row bold
@@ -72,11 +84,14 @@ code {
 // add margin spacing to top and bottom row
 .row {
   max-width: 2000px; // prevent width from going full on large displays
-  margin: 50px auto !important;
+  // margin: 50px auto !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  padding: 50px 25px !important;
 }
 
-.row-slim-margin {
-  margin: 0px !important;
+.row-slim-padding {
+  padding: 13px 0px 0px 0px !important;
 }
 
 // *********************
@@ -92,15 +107,24 @@ code {
   text-shadow: 2px 2px 4px black;
   font-family: "Bungee", cursive;
 }
+
+// customize font awesome icon for nav
+// makes icon more centered and aligned with text
 .primary-nav-icon {
   margin: 6px;
-  bottom: 2px;
+  bottom: 3px;
   position: relative;
+}
+
+// add hover to font awesome icon on link hover
+// learn more: https://stackoverflow.com/questions/6966180/change-element-style-on-hover-another-element
+.resume-cta div a:hover > svg {
+  filter: drop-shadow(2px 2px 2px black) !important;
 }
 
 // Adjust line height for primary navigation items
 .navbar-collapse {
-    line-height: 1.9em;
+  line-height: 2.1em;
 }
 
 // Change hamburger menu background color
@@ -116,13 +140,14 @@ code {
   }
   .nav-dropdown-adjustment {
     margin-left: 31px;
-  }  
+  }
 }
 
 .dropdown-item {
   font-family: "Raleway", cursive;
-  font-size: 1.3em;
+  font-size: 1.5em;
   text-align: center !important;
+  padding: 10px 0px !important;
 }
 .dropdown-menu.show {
   background-clip: padding-box;
@@ -151,17 +176,19 @@ code {
   color: $turquoiseLink !important;
 }
 // Set hover and active styles for nav dropdown
-.theme-twk-custom-nav-dropdown > .dropdown-menu > a:hover, .dropdown-item.active,
-.dropdown-item:active, a.dropdown-item.active {
-    background: #813db4cf !important;
-    color: white !important;
-    text-shadow: 2px 2px 4px black;
-    border-radius: 0.25rem;
+.theme-twk-custom-nav-dropdown > .dropdown-menu > a:hover,
+.dropdown-item.active,
+.dropdown-item:active,
+a.dropdown-item.active {
+  background: #813db4cf !important;
+  color: white !important;
+  text-shadow: 2px 2px 4px black;
+  border-radius: 0.25rem;
 }
 
 // Add line height to dropdown nav
 navbar-nav .dropdown-menu {
-    line-height: 1.5em;
+  line-height: 1.5em;
 }
 
 // Center align resume button
@@ -172,15 +199,16 @@ navbar-nav .dropdown-menu {
 }
 .download-resume {
   background-color: $themeLightOrange !important;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   padding: 12px 25px !important;
   margin: 0px !important;
+  font-size: 1.4em;
 }
 .download-resume:hover,
 .download-resume:active {
   background-color: $themePurple !important;
-    color: white !important;
-    text-shadow: 2px 2px 4px black;
+  color: white !important;
+  text-shadow: 2px 2px 4px black;
 }
 
 // Set card margins and ensure last paragraph has no padding
@@ -189,7 +217,7 @@ navbar-nav .dropdown-menu {
 }
 .card p:last-child {
   margin-bottom: 0px;
-} 
+}
 
 // *********************
 // Footer
@@ -241,15 +269,26 @@ navbar-nav .dropdown-menu {
 
 // PROFESSIONAL SUMMARY
 .professional-summary {
+  background-color: $themeVibrantYellowGreen;
+  color: $themeDarkBackground;
+  border-top: 20px solid #d8e052;
+}
+.light-text-shadow {
   text-shadow: 2px 2px 4px white;
 }
 
 // ABOUT ME
 .about-me {
   // TODO: figure out spacing issue before invoking these
-  // border-top: 20px solid #05b3ff;
-  // border-bottom: 20px solid #fcb045;
-  background-color: rgb(33, 33, 33);
+  border-top: 20px solid #c2c76b; // #05b3ff
+  border-bottom: 20px solid #fc4d45; // #fcb045
+  background-color: #1d1d1d; // rgb(33, 33, 33)
+}
+
+// EDUCATION HISTORY
+.education-history {
+  background-color: $themeVibrantYellowGreen;
+  color: $themeDarkBackground;
 }
 
 // *********************
