--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -1,5 +1,5 @@
 // *********************
-// Theme Colors
+// THEME COLORS
 // *********************
 $theme-colors: (
   "info": tomato,
@@ -16,6 +16,7 @@ $themeOrange: #fcb045;
 $themeGreen: #32efa6;
 $themeBlue: #3d93b9;
 $themePurple: #813db4;
+$themeRed: #e63e3e;
 $themeVibrantYellowGreen: #f4fd5b;
 $themeVibrantYellowGreenLight: #f0f4c2;
 $themeLightOrange: #ffe6a2;
@@ -24,9 +25,11 @@ $navLightHover: #e6e6e6;
 $turquoiseLink: #00e6ff;
 
 // *********************
-// HTML & Primary Content
+// HTML & GENERAL STYLINGS
 // *********************
 body {
+  background-color: $themeDarkBackground !important;
+  color: $themeDarkText !important;
   line-height: 1.7em !important;
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -72,6 +75,34 @@ p {
 code {
   font-family: "Roboto Mono", monospace;
 }
+.mainContent {
+  .row {
+    a {
+      color: $turquoiseLink;
+    }
+    a:hover,
+    a:active,
+    a:visited {
+      color: $themeVibrantYellowGreen;
+    }
+  }
+}
+
+.link-light-bg {
+    a {
+      color: $themeBlue !important;
+    }
+    a:hover,
+    a:active,
+    a:visited {
+      color: $themeRed !important;
+    }
+}
+.highlighter {
+  background-color: #d8e052;
+  padding: 1px 5px 1px 5px;
+  border-radius: .25em;
+}
 
 // make links inside a row bold
 .row a {
@@ -89,13 +120,36 @@ code {
   margin-right: auto !important;
   padding: 50px 25px !important;
 }
-
+.light-text-shadow {
+  text-shadow: 2px 2px 4px white;
+}
 .row-slim-padding {
   padding: 13px 0px 0px 0px !important;
 }
 
+@media (max-width: 536px) {
+  h1 {
+    font-size: 3.3em !important;
+  }
+  h2 {
+    font-size: 2.4em !important;
+  }
+  h3 {
+    font-size: 1.9em !important;
+  }
+  h4 {
+    font-size: 1.7em !important;
+  }
+  h5 {
+    font-size: 1.2em !important;
+  }
+  h6 {
+    font-size: 1.1em !important;
+  }
+}
+
 // *********************
-// Navbar and Dropdown Menus
+// NAVIGATION AND NAVIGATION DROP DOWN MENUS
 // *********************
 .timknab-logo {
   height: 50px;
@@ -133,7 +187,7 @@ code {
   border: unset !important;
   padding: 10px;
 }
-// Center adjust "About" heading for mobile
+// Center adjust "About" drop down menu heading for mobile
 @media (max-width: 992px) {
   .navbar-collapse {
     margin-bottom: 20px;
@@ -214,67 +268,26 @@ navbar-nav .dropdown-menu {
 // Set card margins and ensure last paragraph has no padding
 .card {
   margin: auto 15px;
+  color: $themeDarkBackground;
+  background-color: $themeVibrantYellowGreen !important;
+  border: 1px solid $themeVibrantYellowGreen !important;
 }
 .card p:last-child {
   margin-bottom: 0px;
 }
 
 // *********************
-// Footer
-// *********************
-.footer {
-  position: absolute;
-  bottom: 0;
-}
-
-// *********************
-// Dark and Light modes
-// *********************
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: $themeDarkBackground !important;
-    color: $themeDarkText !important;
-  }
-
-  .card {
-    color: $themeDarkBackground;
-    background-color: $themeVibrantYellowGreen !important;
-    border: 1px solid $themeVibrantYellowGreen !important;
-  }
-
-  .mainContent {
-    .row {
-      a {
-        color: $turquoiseLink !important;
-      }
-      a:hover,
-      a:active,
-      a:visited {
-        color: $themeVibrantYellowGreen !important;
-      }
-    }
-  }
-}
-@media (prefers-color-scheme: light) {
-  body {
-    background-color: $themeLightBackground !important;
-    color: $themeLightText !important;
-  }
-
-  .card {
-    border: 1px solid $themeVibrantYellowGreen !important;
-    background-color: $themeVibrantYellowGreen !important;
-  }
-}
-
 // PROFESSIONAL SUMMARY
+// *********************
 .professional-summary {
   background-color: $themeVibrantYellowGreen;
   color: $themeDarkBackground;
   border-top: 20px solid #d8e052;
 }
-.light-text-shadow {
-  text-shadow: 2px 2px 4px white;
+.professional-summary-description {
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 .bio-photo {
   margin-left: auto;
@@ -283,14 +296,20 @@ navbar-nav .dropdown-menu {
   box-shadow: 10px 3px 14px 5px #989e21;
   max-height: 500px;
 }
-
-// ABOUT ME
-
-.professional-summary-description {
-  height: 100%;
-  margin-top: auto;
-  margin-bottom: auto;
+@media (max-width: 991px) {
+  .bio-photo {
+    box-shadow: 1px 12px 14px 5px #989e21;
+  }
+  .professional-summary-description {
+    h1 {
+      margin-top: 20px !important;
+    }
+  }
 }
+
+// *********************
+// ABOUT ME
+// *********************
 
 .about-me {
   // TODO: figure out spacing issue before invoking these
@@ -299,14 +318,24 @@ navbar-nav .dropdown-menu {
   background-color: #1d1d1d; // rgb(33, 33, 33)
 }
 
+// *********************
 // EDUCATION HISTORY
+// *********************
 .education-history {
   background-color: $themeVibrantYellowGreen;
   color: $themeDarkBackground;
 }
 
 // *********************
-// Imports
+// FOOTER
+// *********************
+.footer {
+  position: absolute;
+  bottom: 0;
+}
+
+// *********************
+// IMPORTS
 // *********************
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 @import url("https://fonts.googleapis.com/css2?family=Bungee&family=Roboto+Mono:ital@0;1&family=Roboto:ital,wght@0,400;0,900;1,400;1,900&display=swap");
