--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -296,6 +296,24 @@ navbar-nav .dropdown-menu {
   box-shadow: 10px 3px 14px 5px #989e21;
   max-height: 500px;
 }
+.socials {
+  text-align: center;
+  max-width: 800px;
+}
+.social-linkedin, .social-linkedin:visited {
+  color: #0E6AA8 !important;
+}
+.social-github, .social-github:visited {
+  color: #2A2A2A !important;
+}
+.social-stackoverflow, .social-stackoverflow:visited {
+  color: #f2770c !important;
+}
+.social-linkedin:hover,
+.social-github:hover,
+.social-stackoverflow:hover {
+  color: rgb(81, 81, 81) !important; 
+}
 @media (max-width: 991px) {
   .bio-photo {
     box-shadow: 1px 12px 14px 5px #989e21;
