rearranged footer copy and ico

--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -362,7 +362,7 @@ navbar-nav .dropdown-menu {
 .wa-state {
   max-height: 50px;
   filter: drop-shadow(2px 2px 2px black) !important;
-  margin-left: 15px;
+  margin-right: 15px;
 }
 
 // *********************
