--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -125,6 +125,9 @@ code {
 .row-slim-padding {
   padding: 13px 0px 0px 0px !important;
 }
+.icon-shadow-light {
+  filter: drop-shadow(2px 2px 2px #828900) !important;
+}
 
 @media (max-width: 536px) {
   h1 {
@@ -152,6 +155,7 @@ code {
 // *********************
 .timknab-logo {
   height: 50px;
+  filter: drop-shadow(2px 2px 2px black) !important;
 }
 
 .nav-link {
