updated icon class name

--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -125,7 +125,7 @@ code {
 .row-slim-padding {
   padding: 13px 0px 0px 0px !important;
 }
-.icon-shadow-light {
+.icon-shadow-light-bg {
   filter: drop-shadow(2px 2px 2px #828900) !important;
 }
 
