--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -119,7 +119,7 @@ code {
   margin-right: auto !important;
   padding: 50px 25px !important;
 }
-.light-text-shadow {
+.light-text-shadow, .light-text-shadow h1  {
   text-shadow: 2px 2px 4px white;
 }
 .row-slim-padding {
@@ -363,16 +363,35 @@ navbar-nav .dropdown-menu {
   background-color: $themeBlue;
   border-top: 20px solid #1e7398;
 }
+// .footer-tagline {
+//   margin-top: auto;
+//   margin-bottom: auto;
+// }
 .handcrafted-tag {
   font-weight: bold;
   color: white;
   text-shadow: 2px 2px 4px black;
   text-align: center;
+  margin-bottom: 0px;
 }
-.wa-state {
-  max-height: 50px;
+.wa-state img {
+  max-height: 45px;
   filter: drop-shadow(2px 2px 2px black) !important;
   margin-right: 15px;
+  margin-left: 15px;
+}
+.crafted-with-care {
+    background-color: #1e7398;
+    border-radius: 0.9rem;
+    // font-style: italic;
+    padding: 5px 13px 6px 13px;
+    font-size: 70%;
+}
+// Break WA State icon on word break
+@media (max-width: 604px) {
+  .crafted-with-care { position: relative; left: 55px; top: 22px; }
+  .wa-state { display: block; line-height: 3.5em; }
+  .wa-state img { margin-left: 0px; margin-right: 10px; max-height: 70px; position: relative; bottom: 15px;}
 }
 
 // *********************
