added <3 icon to footer tag

--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -387,6 +387,9 @@ navbar-nav .dropdown-menu {
     padding: 5px 13px 6px 13px;
     font-size: 70%;
 }
+.love-icon {
+  margin-right: 5.4px;
+}
 // Break WA State icon on word break
 @media (max-width: 604px) {
   .crafted-with-care { position: relative; left: 55px; top: 22px; }
