--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -363,10 +363,6 @@ navbar-nav .dropdown-menu {
   background-color: $themeBlue;
   border-top: 20px solid #1e7398;
 }
-// .footer-tagline {
-//   margin-top: auto;
-//   margin-bottom: auto;
-// }
 .handcrafted-tag {
   font-weight: bold;
   color: white;
@@ -381,21 +377,20 @@ navbar-nav .dropdown-menu {
   margin-left: 15px;
 }
 .crafted-with-care {
-    background-color: #1e7398;
     border-radius: 0.9rem;
-    // font-style: italic;
-    padding: 5px 13px 6px 13px;
+    font-style: italic;
     font-size: 70%;
 }
 .love-icon {
-  margin-right: 5.4px;
+  margin-left: 4px;
+  font-style: normal !important;
 }
 // Break WA State icon on word break
-@media (max-width: 604px) {
-  .crafted-with-care { position: relative; left: 55px; top: 22px; }
-  .wa-state { display: block; line-height: 3.5em; }
-  .wa-state img { margin-left: 0px; margin-right: 10px; max-height: 70px; position: relative; bottom: 15px;}
-}
+// @media (max-width: 604px) {
+//   .crafted-with-care { position: relative; left: 55px; top: 22px; }
+//   .wa-state { display: block; line-height: 3.5em; }
+//   .wa-state img { margin-left: 0px; margin-right: 10px; max-height: 70px; position: relative; bottom: 15px;}
+// }
 
 // *********************
 // IMPORTS
