--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -379,7 +379,7 @@ navbar-nav .dropdown-menu {
 .crafted-with-care {
     border-radius: 0.9rem;
     font-style: italic;
-    font-size: 70%;
+    font-size: 16px;
 }
 .love-icon {
   margin-left: 4px;
