site titel tweak

--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -341,7 +341,7 @@ navbar-nav .dropdown-menu {
 .social-linkedin:hover,
 .social-github:hover,
 .social-stackoverflow:hover {
-  color: rgb(81, 81, 81) !important;
+  color: #a847f6 !important;
 }
 @media (max-width: 991px) {
   .bio-photo {
