changed bootstrap imports to grab only utilized components

--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -450,6 +450,7 @@ navbar-nav .dropdown-menu {
   border-bottom: 20px solid #d2d740;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
+  box-shadow: 1px 22px 33px -16px #000000bf;
 }
 
 .education-history h4 {
