--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -119,6 +119,15 @@ code {
   margin-right: auto !important;
   padding: 50px 25px !important;
 }
+
+// Reduce row padding for smaller mobile displays
+@media (max-width: 450px) {
+  .row {
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+  }
+}
+
 .light-text-shadow,
 .light-text-shadow * {
   text-shadow: 2px 2px 4px white;
