--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -160,6 +160,15 @@ code {
   }
 }
 
+@media (max-width: 450px) {
+  h1 {
+    font-size: 2.46em !important;
+  }
+  h2 {
+    font-size: 2.2em !important;
+  }
+}
+
 // *********************
 // NAVIGATION AND NAVIGATION DROP DOWN MENUS
 // *********************
@@ -248,6 +257,18 @@ code {
   border-radius: 0.25rem;
   font-size: 1.2rem;
   padding: 20px 5px;
+}
+@media (max-width: 450px) {
+  .dropdown-item,
+  .download-resume {
+    font-size: 1.3em !important;
+  }
+  #download-word {
+    display: none;
+  }
+  #responsive-navbar-nav {
+    width: 100%;
+  }
 }
 .navbar.navbar-expand-lg.navbar-dark.bg-primary {
   background: $themePurple;
