--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -169,6 +169,15 @@ code {
   }
 }
 
+@media (max-width: 360px) {
+  h1 {
+    font-size: 2.2em !important;
+  }
+  h2 {
+    font-size: 2em !important;
+  }
+}
+
 // *********************
 // NAVIGATION AND NAVIGATION DROP DOWN MENUS
 // *********************
