--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -257,24 +257,17 @@ code {
   font-family: "Raleway", cursive;
   font-size: 1.5em;
   text-align: center !important;
-  padding: 10px 0px !important;
+  padding: 10px 10px !important;
 }
 .dropdown-menu.show {
   background-clip: padding-box;
   background-color: whitesmoke;
   border: 2px solid rgba(0, 0, 0, 0.15);
-  border-radius: 0.25rem;
   font-size: 1.2rem;
-  padding: 20px 5px;
+  padding: 20px 25px;
+  border-radius: 10px;
 }
 @media (max-width: 450px) {
-  .dropdown-item,
-  .download-resume {
-    font-size: 1.3em !important;
-  }
-  #download-word {
-    display: none;
-  }
   #responsive-navbar-nav {
     width: 100%;
   }
@@ -311,30 +304,6 @@ a.dropdown-item.active {
 // Add line height to dropdown nav
 navbar-nav .dropdown-menu {
   line-height: 1.5em;
-}
-
-// Expand download resume button to full width
-.download-resume-row {
-  width: 100%;
-}
-.download-resume {
-  background-color: $themeLightOrange !important;
-  border-radius: 0.5rem;
-  padding: 12px 25px !important;
-  margin: 0px !important;
-  font-size: 1.4em;
-}
-.download-resume:hover,
-.download-resume:active {
-  background-color: $themePurple !important;
-  color: white !important;
-  text-shadow: 2px 2px 4px black;
-}
-// Adjust download resume text spacing
-#download-resume-wrapper {
-  position: relative;
-  top: 2px;
-  left: 5px;
 }
 
 // Set card margins and ensure last paragraph has no padding
