--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -361,7 +361,7 @@ navbar-nav .dropdown-menu {
 .social-linkedin:hover,
 .social-github:hover,
 .social-stackoverflow:hover {
-  color: #a847f6 !important;
+  color: #454545 !important;
 }
 @media (max-width: 991px) {
   .bio-photo {
@@ -404,13 +404,33 @@ navbar-nav .dropdown-menu {
 
 .skills p {
   padding-top: 0;
-  text-shadow: 2px 2px 4px black;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .stacks {
   background-color: $themeVibrantYellowGreenLight;
   border-bottom: 20px solid #c2c76b;
   background-image: url("./assets/images/axiom-bg-pattern.png");
+  &__python {
+    position: relative;
+    top: 20px;
+  }
+}
+
+.tilt {
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.tilt:hover {
+  -webkit-transform: rotate(-5deg);
+  -moz-transform: rotate(-5deg);
+  -o-transform: rotate(-5deg);
+  -ms-transform: rotate(-5deg);
+  transform: rotate(-5deg);
 }
 
 .stack-image {
@@ -420,11 +440,20 @@ navbar-nav .dropdown-menu {
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.stack-image-adjust {
-  bottom: 22px;
+
+.ror-image {
+  bottom: 19px;
 }
+
 .hack-image {
-  margin-right: -50px;
+  bottom: 6px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  flex-grow: 0.6 !important;
+}
+
+.lamp-image {
+  bottom: 20px;
 }
 
 @media (max-width: 991px) {
@@ -434,6 +463,7 @@ navbar-nav .dropdown-menu {
   .hack-image {
     margin-bottom: -35px;
     margin-right: auto;
+    bottom: 17px;
   }
 }
 
@@ -452,7 +482,7 @@ navbar-nav .dropdown-menu {
 
 .projects p {
   padding-top: 0;
-  text-shadow: 2px 2px 4px black;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .project-row {
@@ -495,7 +525,7 @@ navbar-nav .dropdown-menu {
 
 .experience p {
   padding-top: 0;
-  text-shadow: 2px 2px 4px black;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 // *********************
@@ -542,13 +572,13 @@ navbar-nav .dropdown-menu {
 .handcrafted-tag {
   font-weight: bold;
   color: white;
-  text-shadow: 2px 2px 4px black;
+  text-shadow: 2px 2px 4px #000000;
   text-align: center;
   margin-bottom: 0px;
 }
 .wa-state img {
   max-height: 45px;
-  filter: drop-shadow(2px 2px 2px black) !important;
+  filter: drop-shadow(2px 2px 2px #000000) !important;
   margin-right: 10px;
 }
 .crafted-with-care {
