--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -1,3 +1,9 @@
+// TODO: Move non-theme color code into component specific SCSS
+// Strategy: search for each class (other than theme colors) and 
+// move the code over to a scss in the same dir as the component file.
+
+// TODO: Move colors into variable names for re-use and consistency.
+
 // *********************
 // THEME COLORS
 // *********************
@@ -202,6 +208,79 @@ code {
   font-family: "Bungee", cursive;
 }
 
+.navbar-brand {
+  padding-left: 8px;
+  padding-right: 8px;
+  &:hover {
+    @extend .shimmer
+  }
+}
+.shimmer:hover {
+  background: linear-gradient(41deg, #813db4, #32efa6, #fcb045);
+  background-size: 600% 600%;
+  border-radius: 15px;
+  -webkit-animation: AnimationName 2s ease infinite;
+  -moz-animation: AnimationName 2s ease infinite;
+  -o-animation: AnimationName 2s ease infinite;
+  animation: AnimationName 2s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 96%
+  }
+
+  50% {
+    background-position: 100% 5%
+  }
+
+  100% {
+    background-position: 0% 96%
+  }
+}
+
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 96%
+  }
+
+  50% {
+    background-position: 100% 5%
+  }
+
+  100% {
+    background-position: 0% 96%
+  }
+}
+
+@-o-keyframes AnimationName {
+  0% {
+    background-position: 0% 96%
+  }
+
+  50% {
+    background-position: 100% 5%
+  }
+
+  100% {
+    background-position: 0% 96%
+  }
+}
+
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 96%
+  }
+
+  50% {
+    background-position: 100% 5%
+  }
+
+  100% {
+    background-position: 0% 96%
+  }
+}
+
 // customize font awesome icon for nav
 // makes icon more centered and aligned with text
 // .primary-nav-icon {
@@ -212,9 +291,9 @@ code {
 
 // add hover to font awesome icon on link hover
 // learn more: https://stackoverflow.com/questions/6966180/change-element-style-on-hover-another-element
-.resume-cta div a:hover > svg {
-  filter: drop-shadow(2px 2px 2px black) !important;
-}
+// .resume-cta div a:hover > svg {
+//   filter: drop-shadow(2px 2px 2px black) !important;
+// }
 
 // Adjust line height for primary navigation items
 .navbar-collapse {
@@ -264,7 +343,7 @@ code {
   background-color: whitesmoke;
   border: 2px solid rgba(0, 0, 0, 0.15);
   font-size: 1.2rem;
-  padding: 20px 25px;
+  min-width: 300px;
   border-radius: 10px;
 }
 @media (max-width: 450px) {
@@ -298,7 +377,6 @@ a.dropdown-item.active {
   background: #813db4cf !important;
   color: white !important;
   text-shadow: 2px 2px 4px black;
-  border-radius: 0.25rem;
 }
 
 // Add line height to dropdown nav
@@ -345,6 +423,9 @@ navbar-nav .dropdown-menu {
 .socials {
   text-align: center;
   max-width: 800px;
+  svg:hover {
+    @extend .shimmer
+  }
 }
 .social-linkedin,
 .social-linkedin:visited {
@@ -411,10 +492,6 @@ navbar-nav .dropdown-menu {
   background-color: $themeVibrantYellowGreenLight;
   border-bottom: 20px solid #c2c76b;
   background-image: url("./assets/images/axiom-bg-pattern.png");
-  &__python {
-    position: relative;
-    top: 20px;
-  }
 }
 
 .tilt {
@@ -431,6 +508,23 @@ navbar-nav .dropdown-menu {
   -o-transform: rotate(-5deg);
   -ms-transform: rotate(-5deg);
   transform: rotate(-5deg);
+}
+
+.morph {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.morph:hover {
+  border-radius: 50%;
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
 .stack-image {
@@ -494,11 +588,16 @@ navbar-nav .dropdown-menu {
   text-align: center;
   margin-top: auto;
   margin-bottom: auto;
+  &:hover {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    @extend .shimmer
+  }
 }
 
 @media (max-width: 767px) {
   .project-col {
-    text-align: left;
+    margin-bottom: 30px;
   }
 }
 
