add tests for <App /> and <Homepage />

--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -223,6 +223,7 @@ code {
   -moz-animation: AnimationName 2s ease infinite;
   -o-animation: AnimationName 2s ease infinite;
   animation: AnimationName 2s ease infinite;
+  cursor: pointer;
 }
 
 @-webkit-keyframes AnimationName {
